--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.11.4",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
@@ -14,6 +15,7 @@
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
     "formik": "^2.4.6",
+    "graphql": "^16.9.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
@@ -25,6 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "npm run build && aws s3 sync --delete ./build s3://splendid-website --acl public-read --profile splendid-frontend && aws cloudfront create-invalidation --distribution-id E34ISTR8LPJ5WB --paths \"/*\" --profile splendid-frontend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
