--- a/src/.env.prod
+++ b/src/.env.prod
@@ -1,3 +1,3 @@
-REACT_APP_GRAPH_PROFILE_URL = https://qcsdzjvfg22gbmdmod32msvvwq0jqyex.lambda-url.ap-south-1.on.aws/api/application/graphql
+REACT_APP_GRAPH_PROFILE_URL = https://api.splendid.app/api/profile/graphql
 REACT_APP_GRAPH_APPLICATION_URL = https://qcsdzjvfg22gbmdmod32msvvwq0jqyex.lambda-url.ap-south-1.on.aws/api/application/graphql
 REACT_APP_GRAPH_LICENSE_URL= https://qcsdzjvfg22gbmdmod32msvvwq0jqyex.lambda-url.ap-south-1.on.aws/api/application/graphql
